[tool.poetry]
name = "segment-on-stream"
version = "0.1.0"
description = "App for segment anything on rtsp stream"
authors = ["Rostyslav Skliar <rosklyar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
onnxruntime = "1.19.2"
opencv-python = "4.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"