[tool.poetry]
name = "segment-on-stream"
version = "0.1.0"
description = "App for segment anything on rtsp stream"
authors = ["Rostyslav Skliar <rosklyar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
ailia = ">=1.4.0"
ailia_tokenizer = ">=1.3.0"
numpy = "<2.0"
matplotlib = ">=3.2.1"
opencv-python = ">=4.4.0.42"
pillow = ">=7.1.2"
scipy = ">=1.4.1"
urllib3 = ">=1.25.9"
scikit-image = ">=0.17.2"
tqdm = "*"
h5py = "*"
filterpy = "*"
ftfy = "*"
webcolors = "*"
pymatting = "*"
lapx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"